# clion-bazel-examples

./: .gitignore  README.md
custom_mingw_toolchain/: .bazelproject  .bazelrc  MODULE.bazel  README.md  WORKSPACE
custom_mingw_toolchain/platform/: BUILD
custom_mingw_toolchain/src/: hello_world.cc
custom_mingw_toolchain/toolchain/: BUILD.tmpl  config.bzl  rules.bzl
hermetic_toolchain/: .bazelproject  .bazelrc  MODULE.bazel  README.md  WORKSPACE
llvm_toolchain/: .bazelproject  MODULE.bazel  README.md
llvm_toolchain/src/: a.out  hello_world.cc
