bazel_dep(name = "toolchains_llvm", version = "1.0.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

llvm.toolchain(
  name = "llvm_toolchain",
  llvm_versions = {
    "": "17.0.1",
    "linux-x86_64": "16.0.0", 
  },
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
